@@ -3,12 +3,23 @@ LHAPDF6 TODO list
 
 NOW
 
-* Fix multi_array reshaping in PDFGrid loading
-
 * Use auto_ptr in LHAGlue
 
-* Add nice (correctly typed, syntactically sugared) metadata methods to PDF
-   ... and more specific ones on PDFGrid? Probably.
+* Fix multi_array reshaping in PDFGrid loading
+
+* Forbid PDF construction from a direct path to the data file?
+   Rely on dir structure instead? Do PDFs _need_ to have a dir? (Maybe yes)
+
+* Add Boost and yaml-cpp detection and path-passing to build system
+   Can yaml-cpp be kept completely internal and bundled?
+
+* Enable Doxygen building
+   And put the DESIGN document into the Doxy output
+
+
+NEXT
+
+* Add more metadata methods to PDF and PDFGrid
 
 * Adapt interpolators and extrapolators to use new grid format.
    Slight rename to e.g. GridInterpolator to make the grid part specific?
@@ -27,6 +38,12 @@ NOW
 
 
 FOR BETA 1
+
+* Throw/assert if dir name and file name are inconsistent
+
+* Include installation dir in search list
+
+* lhapdf-config build assistant script
 
 * Only expose headers with the public interface
    Internalise headers used for implementation components only.
@@ -57,4 +74,26 @@ FOR BETA 2
 
 * Interpolation in (log(x), log(Q2)) as well as (x, Q)
 
-* More Fortran API elements? On demand after first beta release
+* More Fortran API elements
+   On demand after first beta release.
+
+* Updated lhapdf-getdata, downloading PDFs as tarballs
+
+
+FOR STABLE 6.0.0 RELEASE
+
+* Versioning scheme for PDF data
+   In metadata and tarball filenames.
+
+* Python interface
+   For access to standard functionality but not pluggable in the sense that a
+   Python interpolator class cannot be passed to a wrapped PDF object: so hide
+   the non-factory-based functions.
+
+
+AS AND WHEN
+
+* Read zipped/tarred PDFs
+   With standard directory structure internally.
+
+* Updated Octave wrapper
