@@ -1,3 +1,4 @@
 Verbosity: 1
 Interpolator: cubic
 Extrapolator: error
+ImplicitFlavorAction: return_zero
